tests/baselines/reference/interfaceWithPrivateMember.errors.txt
==== tests/cases/compiler/interfaceWithPrivateMember.ts (5 errors) ====
    // interfaces do not permit private members, these are errors
    
    interface I {
        private x: string;
        ~~~~~~~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }
    
    interface I2<T> {
        private y: T;
        ~~~~~~~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }
    
    var x: {
        private y: string;
        ~~~~~~~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
                   ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.